lab2 updated 2025-12-20